titan_build.log
   Compiling titan-engine v0.1.0 (C:\Users\josep\Downloads\prometheus\crates\titan-engine)
warning: unused import: `std::ffi::c_void`
 --> crates\tensor-engine\src\cuda.rs:7:9
  |
7 |     use std::ffi::c_void;
  |         ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated method `pyo3::deprecations::GilRefs::<T>::function_arg`: use `&Bound<'_, T>` instead for this function argument
   --> crates\tensor-engine\src\lib.rs:226:39
    |
226 |     fn tensor_engine(_py: Python<'_>, m: &PyModule) -> PyResult<()> {
    |                                       ^
    |
    = note: `#[warn(deprecated)]` on by default

warning: `tensor-engine` (lib) generated 2 warnings (run `cargo fix --lib -p tensor-engine` to apply 1 suggestion)
error[E0382]: borrow of moved value: `profile`
  --> crates\titan-engine\build.rs:14:56
   |
10 |         let profile = env::var("PROFILE").unwrap_or_else(|_| "debug".to_string());
   |             ------- move occurs because `profile` has type `String`, which does not implement the `Copy` trait
11 |         let build_dir = target_dir.join(profile).join("build");
   |                                         ------- value moved here
...
14 |         eprintln!("titan-engine build.rs: profile={}", profile);
   |                                                        ^^^^^^^ value borrowed here after move
   |
help: consider borrowing `profile`
   |
11 |         let build_dir = target_dir.join(&profile).join("build");
   |                                         +

For more information about this error, try `rustc --explain E0382`.
error: could not compile `titan-engine` (build script) due to 1 previous error
